--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ body {
   font-size: clamp(2.5rem, 7vw, 5rem);
   margin: 0 0 2rem 0;
   padding: 0.5rem 0;
-  color: #00ffff;
-  -webkit-text-stroke: 1px #000000;
-  text-stroke: 1px #000000;
+  color: #ffffff;
+  -webkit-text-stroke: 1px #acaaaa;
+  text-stroke: 1px #8d8c8c;
   text-shadow: 
     /* Contorno negro adicional */
     -1px -1px 0 #000000,
